sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i = 0;
  while(i<getNombreValeurs()-1){
    if(plusPetit(i+1,i)){
      echange(i+1,i);
      i -= 1;
    }else{
      i += 1;
    }
    if(i=0){
      i += 1;
    }
  }
}